log/build_2026-06-15_07-57-13/line_follower_controller/stdout_stderr.log
-- Found ament_cmake: 2.5.6 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 28.1.18 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.3 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found std_msgs: 5.3.7 (/opt/ros/jazzy/share/std_msgs/cmake)
-- Found geometry_msgs: 5.3.7 (/opt/ros/jazzy/share/geometry_msgs/cmake)
-- Found std_srvs: 5.3.7 (/opt/ros/jazzy/share/std_srvs/cmake)
-- Found nav_msgs: 5.3.7 (/opt/ros/jazzy/share/nav_msgs/cmake)
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/lucifer/anscer_workspace/LineFollower/build/line_follower_controller
[ 25%] Building CXX object CMakeFiles/line_follower_controller_node.dir/src/PidController.cpp.o
In file included from /home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp:9:
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h: In constructor ‘line_follower::PidController::PidController(const rclcpp::NodeOptions&)’:
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h:117:9: error: ‘line_follower::PidController::m_logCounter’ will be initialized after [-Werror=reorder]
  117 |     int m_logCounter;
      |         ^~~~~~~~~~~~
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h:99:18: error:   ‘rclcpp::Time line_follower::PidController::m_turnStartTime’ [-Werror=reorder]
   99 |     rclcpp::Time m_turnStartTime;
      |                  ^~~~~~~~~~~~~~~
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp:26:1: error:   when initialized here [-Werror=reorder]
   26 | PidController::PidController(const rclcpp::NodeOptions& options)
      | ^~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
gmake[2]: *** [CMakeFiles/line_follower_controller_node.dir/build.make:76: CMakeFiles/line_follower_controller_node.dir/src/PidController.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/line_follower_controller_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
